--- a/marco/templates/utils.html
+++ b/marco/templates/utils.html
@@ -82,7 +82,7 @@
   <div class="list-group app-list">
     <li class="list-group-item list-group-item-info">{{title}}</li>
     {% for app in apps %}
-      <a class="list-group-item" href="{{url_for('app.single_version', name=app.name, version=app.version)}}">
+      <a class="list-group-item" href="{{url_for('app.app_version', name=app.name, version=app.version)}}">
         <span class="label label-success">name: {{app.name}}</span>
         <span class="label label-success">version: {{app.version}}</span>
         <span class="label label-success">time: {{app.created}}</span>
