--- a/marco/templates/ui.html
+++ b/marco/templates/ui.html
@@ -13,7 +13,7 @@
   {% if g.user and g.user.is_admin() %}
     <div class="list-group">
       <a class="list-group-item" href="{{url_for('pod.privilege_manage')}}"><i class="fa fa-wrench"></i>  Admin</a>
-      <a class="list-group-item" href="{{url_for('pod.all_pods')}}"><i class="fa fa-gears"></i>  Pods</a>
+      <a class="list-group-item" href="{{url_for('pod.all_pods')}}"><i class="fa fa-cubes"></i>  Pods</a>
     </div>
   {% endif %}
 {% endblock %}
