--- a/marco/templates/pod/pod_dot.html
+++ b/marco/templates/pod/pod_dot.html
@@ -7,6 +7,9 @@
       <tr>
         <td>#</td>
         <td>Url</td>
+        <td>ES</td>
+        <td>etcd</td>
+        <td>influxdb</td>
       </tr>
     </thead>
     <tbody>
@@ -14,6 +17,9 @@
       <tr>
         <td>{{index+1}}</td>
         <td>{{dot.url}}</td>
+        <td>{{dot.es}}</td>
+        <td>{{dot.etcd}}</td>
+        <td>{{dot.influxdb}}</td>
       </tr>
       {% endfor %}
     </tbody>
@@ -21,13 +27,31 @@
   {% call utils.panel_div('default', '增加一个 Dot') %}
     <form class="form-horizontal" role="form" action="{{url_for('pod.pod_dot', pod_id=pod.id)}}" method="post">
       <div class="form-group">
-        <label class="col-sm-2 control-label">Dot Url</label>
-        <div class="col-sm-10">
+        <label class="col-sm-3 control-label">Dot Url</label>
+        <div class="col-sm-9">
           <input type="text" class="form-control" name="dot">
         </div>
       </div>
       <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
+        <label class="col-sm-3 control-label">Elastic Search Url</label>
+        <div class="col-sm-9">
+          <input type="text" class="form-control" name="es">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-sm-3 control-label">Etcd Url</label>
+        <div class="col-sm-9">
+          <input type="text" class="form-control" name="etcd">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-sm-3 control-label">Influxdb Url</label>
+        <div class="col-sm-9">
+          <input type="text" class="form-control" name="influxdb">
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-3 col-sm-9">
           <button type="submit" class="btn btn-default">增加</button>
         </div>
       </div>
