--- a/marco/templates/app/settings.html
+++ b/marco/templates/app/settings.html
@@ -29,7 +29,7 @@
         </thead>
         <tbody>
           <tr>
-            <td>InfluxDB</td>
+            <td>influxdb</td>
             <td>{{influxdb['host']}}</td>
             <td>{{influxdb['port']}}</td>
             <td>{{influxdb['db']}}</td>
