--- a/marco/templates/app/appversion.html
+++ b/marco/templates/app/appversion.html
@@ -85,16 +85,16 @@
             <dt>Sub App List</dt>
             <dd>
               {% for sub_app in sub_apps %}
-                <button class='btn btn-info btn-sub-app-show' data-sub='{{ sub_app|tojson }}'>{{ sub_app.appname }}</button>
+                <button class='btn btn-info btn-sub-app-show' style='margin-bottom: 4px' data-sub='{{ sub_app|tojson }}'>{{ sub_app.appname }}</button>
               {% endfor %}
             </dd>
           </dl>
         {% endif %}
         <form id="sub-apps-settings" class="form-horizontal" role="form">
           <div class="form-group">
-            <label class="col-sm-2 control-label">Sub App Name</label>
+            <label class="col-sm-2 control-label">Name</label>
             <div class="col-sm-10">
-                <label>{{app.name}}-</label><input class="form-control" type="text" value="" id="sub-app-name" name="subname">
+                <label>{{app.name}}-</label><input class="form-control" type="text" value="" id="sub-app-name" name="subname" style='display: inline-block; width: initial'>
             </div>
           </div>
           <div class="form-group">
@@ -135,6 +135,7 @@
           </div>
         </form>
         <input type="hidden" class="sub-app-url" data-name="{{app.name}}" data-version="{{app.version}}">
+        <span id='sub-app-error'></span>
       {% endcall %}
     </div>
   </div>
