--- a/marco/templates/ui.html
+++ b/marco/templates/ui.html
@@ -14,6 +14,7 @@
     <div class="list-group">
       <a class="list-group-item" href="{{url_for('pod.privilege_manage')}}"><i class="fa fa-wrench"></i>  Admin</a>
       <a class="list-group-item" href="{{url_for('pod.all_pods')}}"><i class="fa fa-cubes"></i>  Pods</a>
+      <a class="list-group-item" href="{{url_for('host_adm.all_hosts')}}"><i class="fa fa-gears"></i>  Hosts</a>
     </div>
   {% endif %}
 {% endblock %}
